add consul domain configuration

--- a/templates/server.json.j2
+++ b/templates/server.json.j2
@@ -3,6 +3,7 @@
 
     "data_dir": "{{ consul_data_dir }}",
     "pid_file": "{{ consul_data_dir }}/consul.pid",
+    "domain": "{{ consul_conf_domain }}",
     "datacenter": "{{ consul_datacenter }}",
     "client_addr": "{{ consul_conf_client_addr }}",
     "bind_addr": "{{ consul_conf_bind_addr }}",
