add ui config opt

--- a/templates/client.json.j2
+++ b/templates/client.json.j2
@@ -1,5 +1,6 @@
 {
     "server": false,
+    "ui": false,
 
     "data_dir": "{{ consul_data_dir }}",
     "pid_file": "{{ consul_data_dir }}/consul.pid",
