--- a/templates/server.json.j2
+++ b/templates/server.json.j2
@@ -1,5 +1,6 @@
 {
     "server": true,
+    "ui": {{ consul_conf_ui | to_json }}
 
     "data_dir": "{{ consul_data_dir }}",
     "pid_file": "{{ consul_data_dir }}/consul.pid",
